# graphics-samples

./: .clang-format  .gitignore  3rdparty_stub.cmake  CMakeLists.txt  LICENSE  README.md
cmake/: func.cmake
doc/: framework.md
framework/: CMakeLists.txt
framework/input/: input.cpp  mouse_event.h
framework/math/: color.h  matrix.h  vector.h
framework/platform/: input.cpp  input.h  mouse_event.h  platform.cpp  platform.h  platform_window.h
framework/ui/: common.h  control.cpp  control.h  painter.cpp  painter.h  ui_control.cpp  ui_control.h  ui_painter.cpp  ui_painter.h  ui_widget.cpp  ui_widget.h  widget.cpp  widget.h
framework/util/: common.h  event.cpp  event.h  event_queue.cpp  event_queue.h  macros.h  ref_count.cpp  ref_count.h  util.h  util_common.h  wait_group.h
framework/vk/: api.cpp  api.h  command_buffer.cpp  command_buffer.h  common.h  descriptor.h  device.cpp  device.h  resource.cpp  resource.h  swapchain.cpp  swapchain.h
framework/vkut/: api.cpp  api.h  buffer.cpp  buffer.h  common.h  device.cpp  device.h  instance.cpp  instance.h  swapchain.cpp  swapchain.h  vkut.cpp  vkut.h  vkut_api.cpp  vkut_api.h  vkut_buffer.cpp  vkut_buffer.h  vkut_device.cpp  vkut_device.h  vkut_instance.cpp  vkut_instance.h  vkut_swapchain.cpp  vkut_swapchain.h  vkut_tools.h
samples/: CMakeLists.txt
samples/hello-window/: CMakeLists.txt  main.cpp
